# ResearchLens

./: .dockerignore  .env.example  .gitignore  .importlinter  04-evidence-and-artifact-flows.patch  AGENTS.md  Makefile  README.md  changes.patch  eslint.config.mjs  justfile  package.json  phase.patch  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/api/: README.md  pyproject.toml
apps/api/src/researchlens_api/: __init__.py  bootstrap.py  create_app.py  exception_handlers.py  lifespan.py  main.py
apps/api/tests/: test_app_smoke.py
apps/web/: README.md  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: AppShell.test.tsx  AppShell.tsx  main.tsx
apps/web/src/app/: styles.css
apps/web/src/app/layouts/: AppLayout.tsx
apps/web/src/app/providers/: AppProviders.tsx  AuthProvider.test.tsx  AuthProvider.tsx  QueryProvider.tsx
apps/web/src/app/routes/: ProtectedRoute.tsx  RouteErrorView.tsx  router.tsx
apps/web/src/entities/artifact/: artifact.api.ts
apps/web/src/entities/chat/: chat.api.ts  chat.types.ts
apps/web/src/entities/conversation/: conversation.api.ts
apps/web/src/entities/evidence/: evidence.api.ts
apps/web/src/entities/message/: message.api.ts
apps/web/src/entities/project/: project.api.ts
apps/web/src/entities/run/: run-stream.test.ts  run-stream.ts  run.api.ts
apps/web/src/features/chat_composer/: ChatComposer.test.tsx  ChatComposer.tsx  chatComposer.constants.ts
apps/web/src/features/create_project/: CreateProjectDialog.tsx
apps/web/src/features/post_message/: ConversationComposer.tsx
apps/web/src/pages/artifacts/: ArtifactsPage.test.tsx  ArtifactsPage.tsx
apps/web/src/pages/conversations/: ConversationPage.startup.test.tsx  ConversationPage.test.tsx  ConversationPage.tsx  conversationLaunchStorage.ts  reportRunSelection.test.ts  reportRunSelection.ts  useConversationSendFlow.ts  useInitialConversationMessage.ts
apps/web/src/pages/evidence/: SnippetDetailPage.tsx
apps/web/src/pages/login/: AuthBootstrappingView.tsx  LegacyAuthCredentialsForm.tsx  LegacyLoginBanners.tsx  (+14 more)
apps/web/tests/: chat-startup.e2e.spec.ts  phase11.e2e.spec.ts
apps/worker/: README.md  pyproject.toml
apps/worker/src/researchlens_worker/: __init__.py  bootstrap.py  create_worker.py  main.py  worker_runtime.py
apps/worker/tests/: test_worker_smoke.py
docs/: coding_rules.md
docs/adr/: 2026-04-12-drafting-evidence-pack-and-citation-policy.md  2026-04-12-langgraph-first-research-run-orchestration.md  2026-04-12-llm-and-embedding-boundaries.md  2026-04-12-outline-first-retrieval.md  2026-04-12-retrieval-concurrency-strategy.md  2026-04-12-retrieval-persistence-and-failure-policy.md  2026-04-12-retrieval-provider-contract.md  README.md
docs/architecture/: artifacts-module.md  auth-module.md  backend-vertical-slice.md  conversations-module.md  drafting-module.md  evaluation-module.md  evidence-module.md  frontend-architecture.md  langgraph-runtime.md  module-boundaries.md  repair-module.md  research-run-graph.md  retrieval-module.md  run-lifecycle.md  streaming-protocol.md  system-overview.md
docs/benchmarks/: README.md
docs/codex/: phase_workflow.md
docs/configuration/: README.md  settings.md
docs/phase_reports/: phase_0_completion.md  phase_10_completion.md  phase_11_completion.md  phase_1_completion.md  phase_2_completion.md  phase_3_completion.md  phase_4_completion.md  phase_5_completion.md  phase_6_completion.md  phase_7_5_completion.md  phase_7_completion.md  phase_8_completion.md  phase_9_completion.md
docs/testing/: test-strategy.md
infra/compose/: README.md  docker-compose.dev.yml
infra/docker/: README.md  api.Dockerfile  web.Dockerfile  worker.Dockerfile
infra/github/: README.md
scripts/: README.md  export_openapi.py
(+64 files in other folders)
