[project]
name = "researchlens-workspace"
version = "0.1.0"
description = "Phase 0 workspace configuration for the ResearchLens rebuild."
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/worker",
    "packages/backend",
]

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = [
    "apps/api/src",
    "apps/worker/src",
    "packages/backend/src",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
packages = [
    "researchlens",
    "researchlens_api",
    "researchlens_worker",
]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = []
testpaths = [
    "apps/api/tests",
    "apps/worker/tests",
    "packages/backend/tests",
]
