[project]
name = "researchlens-api"
version = "0.1.0"
description = "Bootstrap-only API application for the ResearchLens rebuild."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "uvicorn>=0.31.0",
    "researchlens-backend",
]

[tool.uv.sources]
researchlens-backend = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/researchlens_api"]
