[project]
name = "researchlens-api"
version = "0.1.0"
description = "Thin API application for the ResearchLens rebuild."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "researchlens-backend",
    "uvicorn>=0.31.0",
]

[tool.uv.sources]
researchlens-backend = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/researchlens_api"]
