[project]
name = "researchlens-worker"
version = "0.1.0"
description = "Bootstrap-only worker application for the ResearchLens rebuild."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "researchlens-backend",
]

[tool.uv.sources]
researchlens-backend = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/researchlens_worker"]

